Layout fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 * {font-family: 'Noto Sans', sans-serif; color: #3c3c3b;} 
 
+.img-fluid {width: 100%;}
+
 a {color: #e2001a;}
 a:hover {color: #BA0217;}
 
